--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
+    "php-loader": "^0.2.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router": "^3.0.3"
